samples/_failures_safe/1761198761_503216_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3e837f7.c: In function ‘main’:
./samples/SAFE/__tmp_b3e837f7.c:164:13: error: expected declaration or statement at end of input
  164 |             double value;
      |             ^~~~~~
./samples/SAFE/__tmp_b3e837f7.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b3e837f7.c:164:13: error: expected declaration or statement at end of input
